# Iris-ML

./: .gitignore  README.md  pyproject.toml
data/: test.json  train.json
src/: MAF.py  SED_NDE_BOSZ_test.json.dvc  SED_NDE_BOSZ_test.tc.dvc  SED_NDE_medium_BOSZ_Z_mix.json  SED_NDE_medium_Z_mix.json  SED_NDE_medium_Z_mix_test.json  SED_NDE_medium_full_sky.json  SED_NDE_medium_full_sky_ccm89.json  SED_NDE_medium_full_sky_long.json  SED_NDE_medium_test.json  do_all.sh  download_data.py  evaluate_model.py  examples.dvc  generate_data.py  models.py  params_medium_BOSZ.json  params_medium_full_sky.json  plot_MH.py  plot_NDE.py  plot_T.py  test.txt  test_coverage.py  train.py  train_NDE.py  utils.py
src/.ipynb_checkpoints/: evaluate_model-checkpoint.py  plot_MH-checkpoint.py  plot_NDE-checkpoint.py
src/dvclive/plots/metrics/disc/: MAD_logg.tsv  MAD_metal.tsv  MAD_temp.tsv  RMSE_logg.tsv  RMSE_metal.tsv  RMSE_temp.tsv
src/dvclive/plots/metrics/halo/: MAD_logg.tsv  MAD_metal.tsv  MAD_temp.tsv  RMSE_logg.tsv  RMSE_metal.tsv  RMSE_temp.tsv
src/examples/: APOGEE_disc.csv  APOGEE_disc.npy  NGC_5904_M_5.txt
